dataset1235/2025-2/805158916/users/644501727/executions/2118643220_2086141900.log
== SUBMISSION (2025-09-01 14:28:14)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = ld / 2*tan(pi.math/11)
area = 11/2 * ld * apótema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:14)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = ld / 2*tan(pi.math/11)
area = 11/2 * ld * apótema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:25)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = ld / 2*tan(pi.math/11)
area = 11 * ld * (apótema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:02)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = lado / 2*tan(pi.math/11)
area = 11 * ld * (apótema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:26:21)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = lado / 2*tan(pi.math/11)
area = 11 * ld * apótema/2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:26:20)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = lado / 2*tan(pi.math/11)
area = 11 * ld * apótema/2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:23)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = ld / 2*tan(pi.math/11)
area = 11 * ld * (apótema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:29:25)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

Apotema = ld /( 2*tan (pi/11))
area = 11/2 * ld * apótema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:03)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = lado / 2*tan(pi.math/11)
area = 11 * ld * (apótema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:29:24)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

Apotema = ld /( 2*tan (pi/11))
area = 11/2 * ld * apótema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = 11/2 * ld * apótema
                       ^^^^^^^
NameError: name 'apótema' is not defined. Did you mean: 'Apotema'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:24:59)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apotema = lado/ 2*tan(pi.math/11)
area = 11 *ld*apotema/2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:13)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = ld / 2*tan(pi.math/11)
area = 11/2 * ld * apótema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:26:18)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = lado / 2*tan(pi.math/11)
area = 11 * ld * apótema/2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = lado / 2*tan(pi.math/11)
              ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:15)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = ld / 2*tan(pi.math/11)
area = 11/2 * ld * apótema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:22)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

apótema = ld / 2*tan(pi.math/11)
area = 11 * ld * (apótema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apótema = ld / 2*tan(pi.math/11)
                         ^^^^^^^
AttributeError: 'float' object has no attribute 'math'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:29:44)
-- CODE: 
from math import *

# faça seu código aqui!
ld = float(input("Digite o lado:"))

Apotema = ld /( 2*tan (pi/11))
area = 11/2 * ld * Apotema
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
Digite o lado:234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
Digite o lado:149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
Digite o lado:337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
Digite o lado:37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
Digite o lado:458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
Digite o lado:84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
